--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,12 @@ authors = ["Scitoshi Nakayobro <matthewtpeterson1@gmail.com>"]
 edition = "2018"
 description = "An optimizing Brainfuck to C compiler"
 license = "MIT"
+repository = "https://github.com/sci4me/rbc"
+keywords = ["brainfuck", "compiler"]
+readme = "README.md"
+
+[badges.travis-ci]
+repository = "sci4me/rbc"
 
 [[bin]]
 name = "rbc"
