--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
-name = "rbc"
+name = "bfkit"
 version = "0.1.2"
 authors = ["Scitoshi Nakayobro <matthewtpeterson1@gmail.com>"]
 edition = "2018"
 description = "An optimizing Brainfuck to C compiler"
 license = "MIT"
-repository = "https://github.com/sci4me/rbc"
+repository = "https://github.com/sci4me/bfkit"
 keywords = ["brainfuck", "compiler"]
 readme = "README.md"
 
 [badges.travis-ci]
-repository = "sci4me/rbc"
+repository = "sci4me/bfkit"
 
 [[bin]]
-name = "rbc"
+name = "bfkit"
 path = "src/main.rs"
 
 [dependencies]
