--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "bfkit"
 version = "0.1.3"
 authors = ["Scitoshi Nakayobro <matthewtpeterson1@gmail.com>"]
 edition = "2018"
-description = "An optimizing Brainfuck to C compiler"
+description = "A Brainfuck toolkit"
 license = "MIT"
 repository = "https://github.com/sci4me/bfkit"
 keywords = ["brainfuck", "compiler"]
