Build on all Rust release channels

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: rust
+
+rust:
+  - nightly
+  - beta
+  - stable
+
+matrix:
+  allow_failures:
+    - rust: nightly
+
 cache: cargo
+
 script:
   - |
       cargo build &&
